--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section>
             <div class="instructions-box">
                 <h2 class="instruction-title">Thank you for your help!</h2>
-                <p class="instructions">At Bus-Mall were are interested in only giving you the best and latest of producs that are out there,
+                <p class="instructions">At Bus-Mall we are interested in only giving you the best and latest of producs that are out there,
                     but in order to do that we need your help. <br> When this test starts, all you have to do is select the image
                     of the product that seems the most interesting out of the three you see in fornt of you. After you're done, we'll even let you know what 
                     was the most intersteting to you. Press the start button when you're ready.
@@ -30,11 +30,44 @@
                 <button class="start-button">Start</button>
             </div>
         </section>
-        <section class="banner-section">
-            <img class="sub-banner-1" src="https://place-hold.it/300x375/000/fff" alt="sub banner">
-            <img class="sub-banner-2" src="https://place-hold.it/300x375/000/fff" alt="sub banner">
-            <img class="sub-banner-3" src="https://place-hold.it/300x375/000/fff" alt="sub banner">
-            
+        <section class="quiz-section">
+            <div class="button-container">
+                <button class="product-choice">
+                    <img src="./assets/dragon.jpg">
+                </button>
+                <button class="product-choice">
+                    <img src="./assets/tauntaun.jpg">
+                </button>
+                <button class="product-choice">
+                    <img src="./assets/water-can.jpg">
+                </button>
+            </div>
+        </section>
+        <section class="result-table">
+            <h2>All done! Thank you for your time</h2>
+            <h3>Here is what you chose:</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Prodcut</th>
+                        <th>Times Chosen</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Canned Dragon Meant</td>
+                        <td class="times-clicked">2</td>
+                    </tr>
+                    <tr>
+                        <td>Tauntaun Sleeping Bag</td>
+                        <td class="times-clicked">5</td>
+                    </tr>
+                    <tr>
+                        <td>Infinate Watering Can</td>
+                        <td class="times-clicked">1</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
 
     </main>
