--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     </header>
     <main>
         <section>
-            <div class="instructions-box">
+            <div id="instructions-box">
                 <h2 class="instruction-title">Thank you for your help!</h2>
                 <p class="instructions">At Bus-Mall we are interested in only giving you the best and latest of producs that are out there,
                     but in order to do that we need your help. <br> When this test starts, all you have to do is select the image
                     of the product that seems the most interesting out of the three you see in fornt of you. After you're done, we'll even let you know what 
                     was the most intersteting to you. Press the start button when you're ready.
                 </p>
-                <button class="start-button">Start</button>
+                <button id="start-button">Start</button>
             </div>
         </section>
         <section class="quiz-section">
@@ -75,6 +75,7 @@
         <div class="footer"></div>
     </footer>
     <div id="footer-background"></div>
+    <script src="./src/app.js" type="module"></script>
 </body>
 
 </html>
