hooked up quiz to start button so that it's revealed from hidden, finished testing getRandomProduct method

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button id="start-button">Start</button>
             </div>
         </section>
-        <section class="quiz-section">
+        <section id="quiz-section" class="hidden">
             <div class="button-container">
                 <button class="product-choice">
                     <img src="./assets/dragon.jpg">
@@ -43,7 +43,7 @@
                 </button>
             </div>
         </section>
-        <section class="result-table">
+        <section id="result-table">
             <h2>All done! Thank you for your time</h2>
             <h3>Here is what you chose:</h3>
             <table>
