added render fuction for buttons and tied them to random product generator

--- a/index.html
+++ b/index.html
@@ -31,17 +31,7 @@
             </div>
         </section>
         <section id="quiz-section" class="hidden">
-            <div class="button-container">
-                <button class="product-choice">
-                    <img src="./assets/dragon.jpg">
-                </button>
-                <button class="product-choice">
-                    <img src="./assets/tauntaun.jpg">
-                </button>
-                <button class="product-choice">
-                    <img src="./assets/water-can.jpg">
-                </button>
-            </div>
+            <div id="button-container"></div>
         </section>
         <section id="result-table">
             <h2>All done! Thank you for your time</h2>
