--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="quiz-section" class="hidden">
             <div id="button-container"></div>
         </section>
-        <section id="result-table">
+        <section id="result-table" class="hidden">
             <h2>All done! Thank you for your time</h2>
             <h3>Here is what you chose:</h3>
             <table>
