added counter functionallity

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="header-background"></div>
     <header>
         <img class="logo" src="./assets/bus-mall logo.png" alt="logo">
-        <h1 class="user-message">
+        <h1 id="user-message">
             Give us your thoughts
         </h1>
     </header>
