got choice limmit working and got end message to display

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id="button-container"></div>
         </section>
         <section id="result-table" class="hidden">
-            <h2>All done! Thank you for your time</h2>
+            <h2>All done!</h2>
             <h3>Here is what you chose:</h3>
             <table>
                 <thead>
