created and wired up retake test

--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
                         <td class="times-clicked">5</td>
                     </tr>
                     <tr>
-                        <td>Infinate Watering Can</td>
+                        <td>Watering Can</td>
                         <td class="times-clicked">1</td>
                     </tr>
                 </tbody>
             </table>
+            <button id="restart-button">Take the test again!</button>
         </section>
 
     </main>
