--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
     </footer>
     <div id="footer-background"></div>
     <script src="./src/app.js" type="module"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.js"></script>
+    <script src="./src/chart.js"></script>
 </body>
 
 </html>
